change profile picture to cover to prevent stretching

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -23,6 +23,7 @@
         
 
         .profile-picture{
+            object-fit: cover;
             width:150px;
             height:150px;
             border: 1px solid $border-gray;
